--- a/projeto3-driveneats.html
+++ b/projeto3-driveneats.html
@@ -1,19 +1,190 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <!-- Importing CSS -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Importing fonts -->
+    <!-- Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet" />
+    <!-- Righteous -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 
     <title>Driven Eats</title>
 </head>
 
 <body>
-    
+    <div class="header">
+        <div class="title">
+            <h1>
+                DrivenEats
+            </h1>
+            <p>
+                Sua comida em 6 minutos.
+            </p>
+        </div>
+    </div>
 
-    
+    <div class="content">
+        <div class="content-section">
+            <div class="section-header">
+                <h1>
+                    Primeiro, seu prato
+                </h1>
+            </div>
+            <div class="section-body">
+                <div class="item_display">
+                    <img src="images/frango_yin_yang 1.png" alt="">
+                    <h2>
+                        Frango Yin Yang
+                    </h2>
+                    <h3>
+                        Um pouco de batata, um pouco de salada
+                    </h3>
+                    <h4>
+                        R$ 14,90
+                    </h4>
+                </div>
+                <div class="item_display">
+                    <img src="images/frango_yin_yang 1.png" alt="">
+                    <h2>
+                        Frango Yin Yang
+                    </h2>
+                    <h3>
+                        Um pouco de batata, um pouco de salada
+                    </h3>
+                    <h4>
+                        R$ 14,90
+                    </h4>
+                </div>
+                <div class="item_display">
+                    <img src="images/frango_yin_yang 1.png" alt="">
+                    <h2>
+                        Frango Yin Yang
+                    </h2>
+                    <h3>
+                        Um pouco de batata, um pouco de salada
+                    </h3>
+                    <h4>
+                        R$ 14,90
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-section">
+            <div class="section-header">
+                <h1>
+                    Agora, sua bebida
+                </h1>
+            </div>
+            <div class="section-body">
+                <div class="item_display">
+                    <img src="images/coquinha_gelada 1.png" alt="">
+                    <h2>
+                        Coquinha gelada
+                    </h2>
+                    <h3>
+                        Lata 350ml
+                    </h3>
+                    <h4>
+                        R$ 4,90
+                    </h4>
+                </div>
+                <div class="item_display">
+                    <img src="images/coquinha_gelada 1.png" alt="">
+                    <h2>
+                        Coquinha gelada
+                    </h2>
+                    <h3>
+                        Lata 350ml
+                    </h3>
+                    <h4>
+                        R$ 4,90
+                    </h4>
+                </div>
+                <div class="item_display">
+                    <img src="images/coquinha_gelada 1.png" alt="">
+                    <h2>
+                        Coquinha gelada
+                    </h2>
+                    <h3>
+                        Lata 350ml
+                    </h3>
+                    <h4>
+                        R$ 4,90
+                    </h4>
+                </div>
+            </div>
+        </div>
+
+        <div class="content-section">
+            <div class="section-header">
+                <h1>
+                    Por fim, sua sobremesa
+                </h1>
+            </div>
+            <div class="section-body">
+                <div class="item_display">
+                    <img src="images/pudim 1.png" alt="">
+                    <h2>
+                        Pudim
+                    </h2>
+                    <h3>
+                        Apensa pudim
+                    </h3>
+                    <h4>
+                        R$ 7,90
+                    </h4>
+                </div>
+                <div class="item_display">
+                    <img src="images/pudim 1.png" alt="">
+                    <h2>
+                        Pudim
+                    </h2>
+                    <h3>
+                        Apensa pudim
+                    </h3>
+                    <h4>
+                        R$ 7,90
+                    </h4>
+                </div>
+                <div class="item_display">
+                    <img src="images/pudim 1.png" alt="">
+                    <h2>
+                        Pudim
+                    </h2>
+                    <h3>
+                        Apensa pudim
+                    </h3>
+                    <h4>
+                        R$ 7,90
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        <button>
+            <p>
+                Selecione os 3 itens para fechar o pedido
+            </p>
+        </button>
+    </div>
+
     <script src="java/script.js"></script>
+
 </body>
+
 </html>
