Added scroll and right margin at sections

--- a/projeto3-driveneats.html
+++ b/projeto3-driveneats.html
@@ -79,6 +79,7 @@
                         R$ 14,90
                     </h4>
                 </div>
+                <div class="space"></div>
             </div>
         </div>
 
@@ -125,6 +126,7 @@
                         R$ 4,90
                     </h4>
                 </div>
+                <div class="space"></div>
             </div>
         </div>
 
@@ -171,6 +173,7 @@
                         R$ 7,90
                     </h4>
                 </div>
+                <div class="space"></div>
             </div>
         </div>
     </div>
