--- a/projeto3-driveneats.html
+++ b/projeto3-driveneats.html
@@ -44,7 +44,7 @@
                 </h1>
             </div>
             <div class="section-body">
-                <div onclick='pickMeal(".meal", ".meal .hide")' class="item_display meal chicken">
+                <div onclick="pickMeal(this, '.chicken .check')" class="item_display meal chicken">
                     <img src="images/frango-fitness.jpg" alt="">
                     <h2>
                         Frango Fitness
@@ -57,11 +57,11 @@
                             R$ 24,00
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickMeal()" class="item_display meal meat">
+                <div onclick="pickMeal(this, '.meat .check')" class="item_display meal meat">
                     <img src="images/alcatra-fitness.jpg" alt="">
                     <h2>
                         Alcatra Maromba
@@ -74,11 +74,11 @@
                             R$ 32,00
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickMeal()" class="item_display meal burguer">
+                <div onclick="pickMeal(this, '.burguer .hide')" class="item_display meal burguer">
                     <img src="images/hamburguer-maromba.jpg" alt="">
                     <h2>
                         Hamburgão Fit
@@ -91,7 +91,7 @@
                             R$ 30,00
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                             R$ 6,10
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                             R$ 6,00
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
@@ -153,7 +153,7 @@
                             R$ 8,00
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
@@ -181,7 +181,7 @@
                             R$ 12,00
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
@@ -198,7 +198,7 @@
                             R$ 15,00
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
@@ -215,7 +215,7 @@
                             R$ 12,90
                         </h4>
                         <figure>
-                            <img class="hide" src="images/checkmark-circle 1.png" alt="">
+                            <img class="check hide" src="images/checkmark-circle 1.png" alt="">
                         </figure>
                     </div>
                 </div>
