Finishing modifications to select function Adapting html

--- a/projeto3-driveneats.html
+++ b/projeto3-driveneats.html
@@ -43,8 +43,8 @@
                     Primeiro, seu prato
                 </h1>
             </div>
-            <div class="section-body">
-                <div onclick="pickMeal(this, '.chicken .check')" class="item_display meal chicken">
+            <div class="section-body meal">
+                <div onclick="pickBox(this, '.chicken .check')" class="item_display chicken">
                     <img src="images/frango-fitness.jpg" alt="">
                     <h2>
                         Frango Fitness
@@ -61,7 +61,7 @@
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickMeal(this, '.meat .check')" class="item_display meal meat">
+                <div onclick="pickBox(this, '.meat .check')" class="item_display meat">
                     <img src="images/alcatra-fitness.jpg" alt="">
                     <h2>
                         Alcatra Maromba
@@ -78,7 +78,7 @@
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickMeal(this, '.burguer .hide')" class="item_display meal burguer">
+                <div onclick="pickBox(this, '.burguer .check')" class="item_display burguer">
                     <img src="images/hamburguer-maromba.jpg" alt="">
                     <h2>
                         Hamburgão Fit
@@ -105,8 +105,8 @@
                     Agora, sua bebida
                 </h1>
             </div>
-            <div class="section-body">
-                <div onclick="pickDrink()" class="item_display drink lemon">
+            <div class="section-body drink">
+                <div onclick="pickBox(this, '.lemon .check')" class="item_display lemon">
                     <img src="images/iced-tea-limao.jpeg" alt="">
                     <h2>
                         Iced Tea Limão
@@ -123,7 +123,7 @@
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickDrink()" class="item_display drink peach">
+                <div onclick="pickBox(this, '.peach .check')" class="item_display peach">
                     <img src="images/iced-tea-pessego.jpeg" alt="">
                     <h2>
                         Iced Tea Pessego
@@ -140,7 +140,7 @@
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickDrink()" class="item_display drink whey">
+                <div onclick="pickBox(this, '.whey .check')" class="item_display whey">
                     <img src="images/Whey-drink.jpg" alt="">
                     <h2>
                         Whey Drink Italac
@@ -167,8 +167,8 @@
                     Por fim, sua sobremesa
                 </h1>
             </div>
-            <div class="section-body">
-                <div onclick="pickDessert()" class="item_display dessert brownie">
+            <div class="section-body dessert">
+                <div onclick="pickBox(this, '.brownie .check')" class="item_display brownie">
                     <img src="images/brownie-whey.jpg" alt="">
                     <h2>
                         Brownie de Whey
@@ -185,7 +185,7 @@
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickDessert()" class="item_display dessert ice">
+                <div onclick="pickBox(this, '.ice .check')" class="item_display ice">
                     <img src="images/taça-maromba.jpg" alt="">
                     <h2>
                         Taça maromba
@@ -202,7 +202,7 @@
                         </figure>
                     </div>
                 </div>
-                <div onclick="pickDessert()" class="item_display dessert pie">
+                <div onclick="pickBox(this, '.pie .check')" class="item_display pie">
                     <img src="images/torta-alemã.jpg" alt="">
                     <h2>
                         Torta Alemã
