Completed okOrder function

--- a/projeto3-driveneats.html
+++ b/projeto3-driveneats.html
@@ -225,7 +225,7 @@
     </div>
 
     <div class="footer">
-        <button class="ok_button">
+        <button onclick='orderClick(this)' class="ok_button">
             <p>
                 Selecione os 3 itens para fechar o pedido
             </p>
