--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="content-section">
             <div class="section-header">
                 <h1>
-                    Primeiro, seu prato
+                    Primeiro, seu prato:
                 </h1>
             </div>
             <div class="section-body meal">
